fix blog post spacing issue

--- a/src/styles/blog-post-content.scss
+++ b/src/styles/blog-post-content.scss
@@ -2,7 +2,7 @@
   .blog-post-content {
     .expressive-code,
     .component-demo {
-      margin-block-end: var(--space-6);
+      margin-block-end: var(--space-3);
     }
   }
 }
